--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,20 @@
+@import "font.css";
+@import "base.css";
+@import "typography.css";
+@import "header.css";
+@import "footer.css";
+@import "main.css";
+
 .header{
     background-color: rgb(181, 221, 248);
-    color: rgb(223, 149, 219);
+    color: rgb(196, 84, 190);
 } 
 .footer{
     background-color: rgb(255, 238, 218);
 }
 @font-face {
     font-family: "Roboto";
-    src: url("../fonts/font/Roboto-Regular.ttf") format("ttf");
+    src: url("../fonts/Roboto-Regular.ttf") format("ttf");
     font-weight: normal;
 }
 
