--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,11 @@
-@import "font.css";
+/* Подключение шрифтов */
+@import "fonts.css";
+/* Подключение основных стилей */
 @import "base.css";
-@import "typography.css";
+/* Подключение стилей относящихся к header */
 @import "header.css";
+/* Подключение стилей относящихся к footer */
 @import "footer.css";
+/* Подключение стилей относящихся к main */
 @import "main.css";
 
-.header{
-    background-color: rgb(181, 221, 248);
-    color: rgb(196, 84, 190);
-} 
-.footer{
-    background-color: rgb(255, 238, 218);
-}
-@font-face {
-    font-family: "Roboto";
-    src: url("../fonts/Roboto-Regular.ttf") format("ttf");
-    font-weight: normal;
-}
-
-body{
-    font-family: "Roboto";
-}
