--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,21 +1,22 @@
 @font-face {
-    font-family: "Roboto";
-    src: url("../fonts/Roboto-Regular.ttf");
+    font-family: "Montserrat";
+    src: url("../fonts/Montserrat-Regular.ttf");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
     }
     @font-face {
-    font-family: "Roboto";
-    src: url("../fonts/Roboto-Bold.ttf");
+    font-family: "Montserrat";
+    src: url("../fonts/Montserrat-Bold.ttf");
     font-weight: bold;
     font-style: normal;
     font-display: swap;
     }
     @font-face {
-    font-family: "Roboto";
-    src: url("../fonts/Roboto-Italic.ttf");
+    font-family: "Montserrat";
+    src: url("../fonts/Montserrat-Italic.ttf");
     font-weight: normal;
     font-style: italic;
     font-display: swap;
     }
+ 
