--- a/styles/style.css
+++ b/styles/style.css
@@ -8,4 +8,5 @@
 @import "footer.css";
 /* Подключение стилей относящихся к main */
 @import "main.css";
-
+/* Подключение адаптации под мобильные устройства */
+@import "media.css";
