--- a/styles/style.css
+++ b/styles/style.css
@@ -14,3 +14,6 @@
 @import "animation.css";
 /* Подключение предзагрузчика страницы */
 @import "preloader.css";
+@import "slider.css";
+@import "card.css";
+
